fix banner right overflow with border-box sizing

--- a/style.css
+++ b/style.css
@@ -98,12 +98,12 @@ img {
 .frame-outer {
 	border: 1px solid #333;
 	padding: 2em;
+	box-sizing: border-box;
 	position: relative;
 	background-image: url('/BK-NM-475.webp');
 	background-size: cover;
 	background-position: center 12.5%;
 	width: 100vw;
-	position: relative;
 	left: 50%;
 	transform: translateX(-50%);
 }
